# cimverter

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  Makefile  README.md  TODO.md
.externalToolBuilders/: CIM.launch
.github/workflows/: test.yml
DistAIX_templates/: BusBar.tpl  PQLoad.tpl  PiLine.tpl  README.md  SolarGenerator.tpl  WindGenerator.tpl  config.cfg  connectors.cfg  default_parameters.csv
Distaix_templates/: BatteryType0.tpl  Connections.tpl  PiLine.tpl  SolarGenerator.tpl  Transformer.tpl  distaix.tpl
Docker/: Dockerfile.omc
ModPowerSystems_templates/: Breaker.tpl  BusBar.tpl  ConnectivityNode.tpl  HouseholdType1.tpl  PQLoad.tpl  PVNode.tpl  PiLine.tpl  RxLine.tpl  Slack.tpl  Transformer.tpl  WindGenerator.tpl  ZLoad.tpl  connectors.cfg  modelica.tpl
PowerGrids_templates/: Bus.tpl  BusBar.tpl  Busbar.tpl  Connections.tpl  LoadImpedancePQ.tpl  PQLoad.tpl  PiLine.tpl  SynchronousMachine4Windings.tpl  Transformer.tpl  TransformerFixedRatio.tpl  connectors.cfg  modelica.tpl
PowerSystem_templates/: BusBar.tpl  PQLoadNormProfile.tpl  PiLine.tpl  Slack.tpl  SolarGenerator.tpl  Transformer.tpl  modelica.tpl
PowerSystems_templates/: PQLoad.tpl  PiLine.tpl  Slack.tpl  connectors.cfg
cmake/Modules/: FindConfig++.cmake  FindCtemplate.cmake
distaix_templates/: BatteryType1.tpl  BusBar.tpl  Connections.tpl  PQLoad.tpl  PiLine.tpl  Slack.tpl  SolarGenerator.tpl  Transformer.tpl  WindGenerator.tpl  ZLoadProfile.tpl  distaix.tpl
distaix_tools/: distaixPostprocessing.py  distaix_postprocessing.py  fileConverter.py  idConverter.py  parameterReplacer.py
docs/: build.md  config.md  defaultValues.md  past-commits.txt  usage.md
evaluation/models/cim/Slack_Load_Line_Sample_With_LoadFlow_Results/: Rootnet_FULL_NE_15J15h_DI.xml  Rootnet_FULL_NE_15J15h_EQ.xml  Rootnet_FULL_NE_15J15h_SV.xml  Rootnet_FULL_NE_15J15h_TP.xml
evaluation/models/cim/Slack_Trafo_Load_Sample_With_LoadFlow_Results/: Rootnet_FULL_NE_23J10h_DI.xml  Rootnet_FULL_NE_23J10h_EQ.xml  Rootnet_FULL_NE_23J10h_SV.xml  Rootnet_FULL_NE_23J10h_TP.xml
evaluation/models/modelica/modpowersystems/: modpowersystems_slack_load_line_sample_v3.mo  modpowersystems_slack_trafo_load_sample_v1.mo
evaluation/models/modelica/powersystems/: powersystems_slack_load_line_sample_v8.mo  powersystems_slack_load_line_sample_v8_with_ground.mo  (+2 more)
evaluation/models/neplan/: Slack_Load_Line_Sample.nepprj  Slack_Trafo_Load_Sample.nepprj
evaluation/results/neplan/: Slack_Load_Line_Sample.rlf  Slack_Trafo_Load_Sample.rlf
evaluation/scripts/: compare_neplan_modelica_results.py  compare_neplan_modpowersystems.py
modelica_templates/: BatteryType0.tpl  BatteryType1.tpl  BusBar.tpl  Connections.tpl  ConnectivityNode.tpl  GenericGenerator.tpl  HouseholdType0.tpl  HouseholdType1.tpl  HouseholdType2.tpl  PQLoad.tpl  PQLoadProfile.tpl  PiLine.tpl  RxLine.tpl  Slack.tpl  SolarGenerator.tpl  Transformer.tpl  WindGenerator.tpl  ZLoad.tpl  modelica.tpl
samples/: IEEE_14_feeder_Cimphony.xml  IEEE_14_feeder_NEPLAN_CIM.mo  IEEE_14_feeder_NEPLAN_CIM.xml  IEEE_14_feeder_NEPLAN_CIM2.xml  IEEE_14_feeder_NEPLAN_CIM_BatteryStorage.xml
samples/BatteryStorage/: entsoe.xml
samples/CIGRE_MV_Rudion_With_LoadFlow_Results/: Rootnet_FULL_NE_24J13h_EQ.xml
samples/EnergyConsumer/: entsoe.xml
samples/IEEE_14_feeder_NEPLAN_CIM/: Rootnet_FULL_NE_11J12h_DI.xml  Rootnet_FULL_NE_11J12h_EQ.xml  Rootnet_FULL_NE_11J12h_SV.xml  Rootnet_FULL_NE_11J12h_TP.xml  Rootnet_FULL_NE_11J12h_TP.xml.mo
samples/IEEE_EU_LV/IEEE_EU_LV_mod_CIM/: Rootnet_FULL_NE_13J16h_DI.xml  Rootnet_FULL_NE_13J16h_EQ.xml  Rootnet_FULL_NE_13J16h_TP.xml
samples/IEEE_EU_LV/IEEE_EU_LV_mod_CIM_BatteryStorage/: README.md  Rootnet_FULL_NE_13J16h_DI.xml  Rootnet_FULL_NE_13J16h_EQ.xml  Rootnet_FULL_NE_13J16h_TP.xml
samples/IEEE_EU_LV/IEEE_EU_LV_mod_Jan/: Rootnet_FULL_NE_01J12h_DI.xml  Rootnet_FULL_NE_01J12h_EQ.xml  Rootnet_FULL_NE_01J12h_SV.xml  Rootnet_FULL_NE_01J12h_TP.xml
samples/ModPowerSystems_MV_Grid_PQLoad/: .mo  Rootnet_Area 1_NE_02J17h_SV.xml
samples/Rootnet_NE/: Rootnet.xml  Rootnet_Area 1_NE_02J17h_EQ.xml  Rootnet_Area 1_NE_02J17h_TP.xml  Rootnet_FULL.xml  Rootnet_TR1.xml
slack_samples/Slack_Load_Line_Sample/: Rootnet_FULL_NE_19J18h_DI.xml  Rootnet_FULL_NE_19J18h_EQ.xml  Rootnet_FULL_NE_19J18h_SV.xml  Rootnet_FULL_NE_19J18h_TP.xml  Slack_Load_Line_Sample.mo
slack_samples/Slack_Load_Sample/: Slack_Load_Sample.emf  gesamt.xml
slack_samples/Slack_Trafo_Load_Sample/: Rootnet_FULL_NE_06J17h_DI.xml  Rootnet_FULL_NE_06J17h_EQ.xml  Rootnet_FULL_NE_06J17h_SV.xml  Rootnet_FULL_NE_06J17h_TP.xml  Slack_Trafo_Load_Sample.emf  Slack_Trafo_Load_Sample.mo
slack_samples/Slack_TwoLoads_Sample/: README.txt  Slack_TwoLoads_Sample.emf  gesamt.xml
src/: CIMFactory.cpp  CIMObjectHandler.cpp  CIMObjectHandler.h  CIMParser.cpp  CIMParser.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DistAIXPostprocessor.cpp  DistAIXPostprocessor.h  DistaixPostprocessor.cpp  DistaixPostprocessor.h  assignments.cpp  config.cfg  main.cpp  powerfactory.cfg  rse.cfg  task.cpp  task_alias.csv  tools.cpp  tools.h  typedefs.cpp
src/ModelicaWorkshop/: ModBaseClass.cpp  ModBaseClass.h  ModelicaClass.h  ModelicaUnit.h  tplMarkers.h  tplMarkersEnum.h
src/ModelicaWorkshop/ModPowerSystems/: Connection.cpp  Connection.h  System.cpp  System.h
src/ModelicaWorkshop/PowerGrids/: SynchronousMachineDynamics.cpp  SynchronousMachineDynamics.h
test/: create_output.bash  diff.bash  testFiles.py
test/modelica/: .Slack_Load_Line_Sample.mo.swp  CIGRE_MV_RightFeeder_NEPLAN.mo  Slack_Load_Line_Sample.mo
test/outputs/: CIGRE_MV_RightFeeder_NEPLAN.mo  Slack_Load_Line_Sample.mo
test/scripts/: test_cigre.mos  test_modell.mos  test_script.bash  test_slack.mos
test/xml/CIGRE_MV_RightFeeder_NEPLAN/: batteryStorage.xml  config.cfg
test/xml/Slack_Load_Line_Sample/: README.txt  Slack_Load_Line_Sample.emf  config.cfg
tools/CIM-XML-Combinator/: README.md  main.py
tools/CIM-XML-Combinator/Rootnet/: Rootnet.xml  Rootnet_Area 1_NE_02J17h_DI.xml
(+73 files in other folders)
